--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
+go_import_path: github.com/spf13/viper
+
 language: go
 go:
   - 1.5.4
   - 1.6.3
   - 1.7
   - tip
-  
+
 os:
   - linux
   - osx
@@ -15,5 +17,11 @@ matrix:
   fast_finish: true
 
 script:
+  - go install ./...
   - go test -v ./...
+
+after_success:
+  - go get -u -d github.com/spf13/hugo
+  - cd $GOPATH/src/github.com/spf13/hugo && make && ./hugo -s docs && cd -
+
 sudo: false
