try excluding vendor from gofmt

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install: true
 
 script:
   - go mod vendor
-  - diff -u <(echo -n) <(gofmt -d .)
+  - diff -u <(echo -n) <(gofmt -d $(go list ./... | grep -v /vendor/))
   - go test -v -mod=readonly ./...
 
 after_success:
