move travis diff call to before vendoring

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ matrix:
 install: true
 
 script:
+  - diff -u <(echo -n) <(gofmt -d .)
   - go mod vendor
-  - diff -u <(echo -n) <(gofmt -d $(go list ./... | grep -v /vendor/))
   - go test -v -mod=readonly ./...
 
 after_success:
