--- a/.github/workflows/feedback_issue.yml
+++ b/.github/workflows/feedback_issue.yml
@@ -16,12 +16,13 @@ jobs:
               repo: context.repo.repo,
               body: `👋 Thanks for reporting!
 
-            A maintainer will take a look at your issue shortly.
+            A maintainer will take a look at your issue shortly. 👀
 
             In the meantime: We are working on **Viper v2** and we would love to hear your thoughts about what you like or don't like about Viper, so we can improve or fix those issues.
-            If you have a couple minutes, please take some time to give us some feedback: https://forms.gle/R6faU74qPRPAzchZ9
 
-            If you've already given us your feedback, you can still help by spreading the news,
+            ⏰ If you have a couple minutes, please take some time and share your thoughts: https://forms.gle/R6faU74qPRPAzchZ9
+
+            📣 If you've already given us your feedback, you can still help by spreading the news,
             either by sharing the above link or telling people about this on Twitter:
 
             https://twitter.com/sagikazarmark/status/1306904078967074816
