Add some emojis to feedback bot
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/.github/workflows/feedback_issue.yml
+++ b/.github/workflows/feedback_issue.yml
@@ -27,6 +27,6 @@ jobs:
 
             https://twitter.com/sagikazarmark/status/1306904078967074816
 
-            **Thank you!**
+            **Thank you!** ❤️
             `,
             })
