--- a/.github/workflows/feedback_pull_request.yml
+++ b/.github/workflows/feedback_pull_request.yml
@@ -27,6 +27,6 @@ jobs:
 
             https://twitter.com/sagikazarmark/status/1306904078967074816
 
-            **Thank you!**
+            **Thank you!** ❤️
             `,
             })
