Add discussions to issue links
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,9 @@
 blank_issues_enabled: false
 contact_links:
+  - name: ❓ Ask a question
+    url: https://github.com/spf13/viper/discussions/new?category=q-a
+    about:  Ask and discuss questions with other Viper community members
+
   - name: 📓 Reference
     url: https://pkg.go.dev/mod/github.com/spf13/viper
     about: Check the Go code reference
