--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,47 +16,64 @@ linters:
         - deadcode
         - dogsled
         - dupl
+        - durationcheck
         - exhaustive
         - exportloopref
         - gci
         - goconst
         - gofmt
-        - gofumpt
         - goimports
-        - golint
+        - gomoddirectives
         - goprintffuncname
         - govet
+        - importas
         - ineffassign
+        - makezero
         - misspell
         - nakedret
+        - nilerr
         - noctx
         - nolintlint
         - prealloc
+        - predeclared
+        - revive
         - rowserrcheck
         - sqlclosecheck
         - staticcheck
         - structcheck
         - stylecheck
+        - tparallel
         - typecheck
         - unconvert
         - unparam
         - unused
         - varcheck
+        - wastedassign
         - whitespace
 
         # fixme
+        # - cyclop
         # - errcheck
+        # - errorlint
+        # - exhaustivestruct
+        # - forbidigo
+        # - forcetypeassert
         # - gochecknoglobals
         # - gochecknoinits
         # - gocognit
         # - gocritic
         # - gocyclo
         # - godot
+        # - gofumpt
         # - gosec
         # - gosimple
+        # - ifshort
         # - lll
         # - nlreturn
+        # - paralleltest
         # - scopelint
+        # - thelper
+        # - wrapcheck
 
         # unused
         # - depguard
