--- a/.golangci.yml
+++ b/.golangci.yml
@@ -22,6 +22,7 @@ linters:
         - gci
         - goconst
         - gofmt
+        - gofumpt
         - goimports
         - gomoddirectives
         - goprintffuncname
@@ -64,7 +65,6 @@ linters:
         # - gocritic
         # - gocyclo
         # - godot
-        # - gofumpt
         # - gosec
         # - gosimple
         # - ifshort
