--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,16 @@
 version: 2
+
 updates:
-- package-ecosystem: gomod
-  directory: /
-  schedule:
-    interval: daily
-- package-ecosystem: github-actions
-  directory: /
-  schedule:
-    interval: daily
+  - package-ecosystem: gomod
+    directory: /
+    labels:
+      - area/dependencies
+    schedule:
+      interval: daily
+
+  - package-ecosystem: github-actions
+    directory: /
+    labels:
+      - area/dependencies
+    schedule:
+      interval: daily
