--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Lint
-        run: make lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.40.1
 
       - name: Test
-        run: make test
+        run: go test -race -v ./...
