chore(linter): enable errorlint

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -17,6 +17,7 @@ linters:
         - dogsled
         - dupl
         - durationcheck
+        - errorlint
         - exhaustive
         - exportloopref
         - gci
