--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,11 @@ jobs:
 
       - name: Test
         run: go test -race -v ./...
+        if: runner.os != 'Windows'
+
+      - name: Test (without race detector)
+        run: go test -v ./...
+        if: runner.os == 'Windows'
 
   lint:
     name: Lint
