--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         go: ['1.14', '1.15', '1.16', '1.17']
+        tags: ['', 'viper_yaml3']
     env:
       GOFLAGS: -mod=readonly
 
@@ -30,11 +31,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Test
-        run: go test -race -v ./...
+        run: go test -race -tags '${{ matrix.tags }}' -v ./...
         if: runner.os != 'Windows'
 
       - name: Test (without race detector)
-        run: go test -v ./...
+        run: go test -tags '${{ matrix.tags }}' -v ./...
         if: runner.os == 'Windows'
 
   lint:
