--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,7 +44,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         go: ['1.16', '1.17', '1.18', '1.19']
-        tags: ['', 'viper_yaml2', 'viper_toml1']
+        tags: ['', 'viper_toml1']
     env:
       GOFLAGS: -mod=readonly
 
