--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,7 +44,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         go: ['1.16', '1.17', '1.18', '1.19']
-        tags: ['']
     env:
       GOFLAGS: -mod=readonly
 
@@ -58,11 +57,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Test
-        run: go test -race -tags '${{ matrix.tags }}' -v ./...
+        run: go test -race -v ./...
         if: runner.os != 'Windows'
 
       - name: Test (without race detector)
-        run: go test -tags '${{ matrix.tags }}' -v ./...
+        run: go test -v ./...
         if: runner.os == 'Windows'
 
   lint:
