--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -22,6 +22,7 @@ linters:
         - exhaustive
         - exportloopref
         - gci
+        - godot
         - gofmt
         - gofumpt
         - goimports
@@ -64,7 +65,6 @@ linters:
         # - goconst
         # - gocritic
         # - gocyclo
-        # - godot
         # - gosec
         # - gosimple
         # - ifshort
