fix: gocritic lint issues

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -7,6 +7,16 @@ linters-settings:
             - standard
             - default
             - prefix(github.com/spf13/viper)
+    gocritic:
+        # Enable multiple checks by tags. See "Tags" section in https://github.com/go-critic/go-critic#usage.
+        enabled-tags:
+            - diagnostic
+            - experimental
+            - opinionated
+            - performance
+            - style
+        disabled-checks:
+            - importShadow
     golint:
         min-confidence: 0
     goimports:
@@ -22,6 +32,7 @@ linters:
         - exhaustive
         - exportloopref
         - gci
+        - gocritic
         - godot
         - gofmt
         - gofumpt
@@ -63,7 +74,6 @@ linters:
         # - gochecknoinits
         # - gocognit
         # - goconst
-        # - gocritic
         # - gocyclo
         # - gosec
         # - gosimple
