--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -18,4 +18,4 @@ jobs:
           stale-issue-message: "Issues with no activity for 30 days are marked stale and subject to being closed."
           close-issue-message: "This issue has been closed for inactivity. Please re-open if this was a mistake."
           stale-issue-label: "lifecycle/stale"
-          debug-only: true # TODO for testing
+          debug-only: false # Set this to 'true' to disable stale issue management
